--- a/pages/projects.html
+++ b/pages/projects.html
@@ -27,13 +27,21 @@
 <div class="col-md-3">
 	<img src="../assets/images/wherewaldo.png" alt="Where's Waldo International" />
 	<h1>Where's Waldo International</h1>
-	<p>A game that sticks Waldo in a random location within the world and lets you find him</p>
+	<p>With 3 team members, created a game that sticks Waldo in a random location within the world and lets you find him</p>
 	<p>HTML, CSS, Javascript, Google Maps API, Facebook API, Twitter API, Google Plus API, Tumblr API</p>
 	<button value="Play Game" class="btn btn-default"><a href="http://web.engr.illinois.edu/~bifft2/" target="_blank">Play the Game</a></button>
 </div>
 <div class="col-md-3">
-	<p>WCS Sign-In App</p>
+	<img src="../assets/images/wcssignin.png" alt="WCS Sign-In App" />
+	<h1>WCS Sign-In App</h1>
+	<p>Along with team members on WCS' Tech Team Committee, designed the front-end of a web application that tracks attendance at UIUC WCS' events and allows members to check their points</p>
+	<p>HTML, CSS, Javascript, PHP, MySQL</p>
+	<button value="Learn More" class="btn btn-default"><a href="http://wcssignin.web.engr.illinois.edu/" target="_blank">Learn More</a></button>
 </div>
 <div class="col-md-3">
-	<p>Recourser</p>
+	<img src="../assets/images/recourser.png" alt="Recourser" />
+	<h1>Recourser</h1>
+	<p>With 3 team members, created a web app that allows students to plan out what classes they want to take for each semester of college</p>
+	<p>HTML, CSS, Javascript, jQuery, Python</p>
+	<button value="Learn More" class="btn btn-default"><a href="http://recourser.herokuapp.com/" target="_blank">Learn More</a></button>
 </div>
