--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,14 +4,18 @@
 </div>
 <div class="row">
 	<form role="form" method="POST" action="http://forms.brace.io/elchao96@gmail.com">
-		<div class="form-group">
-			<label for="nameInput">Name</label>
-			<input type="text" name="name" class="form-control" id="nameInput" placeholder="Enter name">
+		<div class="col-md-6">
+			<div class="form-group">
+				<label for="nameInput">Name</label>
+				<input type="text" name="name" class="form-control" id="nameInput" placeholder="Enter name">
+			</div>
 		</div>
-		<div class="form-group">
-			<label for="emailInput">Email</label>
-			<input type="email" name="_replyto" class="form-control" id="emailInput" placeholder="Enter email">
-		</div>
+		<div class="col-md-6">
+			<div class="form-group">
+				<label for="emailInput">Email</label>
+				<input type="email" name="_replyto" class="form-control" id="emailInput" placeholder="Enter email">
+			</div>
+		<div>
 		<div class="form-group">
 			<label for="messageInput">Message</label>
 			<textarea class="form-control" name="message" id="messageInput" rows="6" placeholder="Enter message"></textarea>
