--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
 				<label for="emailInput">Email</label>
 				<input type="email" name="_replyto" class="form-control" id="emailInput" placeholder="Enter email">
 			</div>
-		<div>
+		</div>
 	</div>
 	<div class="row">
 		<div class="form-group">
