--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular-route.js"></script>
 		<script src="assets/scripts/site.js" type="text/javascript"></script>
 		<script src="assets/scripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
+		<script src="assets/scripts/modernizr.js" type="text/javascript"></script>
 
 		<!--meta-->
 		<title>Emily Chao</title>
