--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular-route.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular-animate.js"></script>
 		<script src="assets/scripts/site.js" type="text/javascript"></script>
 		<script src="assets/scripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
 		<script src="assets/scripts/modernizr.js" type="text/javascript"></script>
@@ -52,7 +53,7 @@
 		</nav>
 		<div class="wrapper">
 			<div id="main">
-				<div ng-view></div>
+				<div ng-view class="fade"></div>
 			</div>
 		</div>
 	</body>
