--- a/pages/home.html
+++ b/pages/home.html
@@ -5,3 +5,8 @@
 	<p>{{ message2 }}</p>
 	<p>{{ message3 }}</p>
 </div>
+<div class="row">
+	<h1>Hi there!</h1>
+	<p>This site is currently under construction, but feel free to look around and give feedback.</p>
+	<p>I am currently using AngularJS routing, Bootstrap and HTML/CSS/Javascript/JQuery. Feedback is appreciated!</p>
+</div>
